to complete challenge

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <script src="index.js">
-        var arr = new Array(10, 20, 30);
-        document.write("arr.length is:" + arr.length);
-    </script>
+    
+    <script src="assets/js/index.js."></script>
+    <script src="assets/js/calculation.js."></script>
+</body>
 </body>
 
 </html>
