--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M4 Challenge</title>
 </head>
+<h1>
+    Console-Finances</h1>
 
 <body>
     
