--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M4 Challenge</title>
+    <title>Console-Finances</title>
 </head>
 <h1>
     Console-Finances</h1>
 
 <body>
     
-    <script src="assets/js/index.js."></script>
-    <script src="assets/js/calculation.js."></script>
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/calculation.js"></script>
 </body>
 </body>
 
